# diabeteswarrior

./: .coverage  .env  .gitignore  Credits.md  LICENSE  LICENSE.md  Licenses.md  README.md  app.db  config.py  dashapp.py  diabeteswarrior.code-workspace  diabeteswarrior.py  dwarrior.session.sql  pyproject.toml  requirements.txt  run.py  site.db
SCAN/: __init__.py
app/: __init__.py  extensions.py  forms.py  models.py  utils.py  webapp.py
app/dashapp1/: layout.py
app/food/: __init__.py  callbacks.py  food.csv  iface.py  ifaces.py  layout.py  meal.csv  utils.py
app/foods/: __init__.py  callbacks.py  layout.py
app/health/: __init__.py  callbacks.py  health.csv  ifaces.py  layout.py
app/healths/: __init__.py  callbacks.py  layout.py
app/meal/: __init__.py  callbacks.py  ifaces.py  layout.py
app/scan/: __init__.py  callbacks.py  config.py  iface.py  ifaces.py  layout.py  scan.csv  utils.py
app/scan_graph/: __init__.py  callbacks.py  layout.py
app/scan_table/: callbacks.py  layout.py
app/scans/: __init__.py  callbacks.py  layout.py
app/static/: grid.css  main.css  popper.js  utils.py
app/tables_scan/: layout.py
app/templates/: account.html  base.html  error.html  home.html  index.html  login.html  new.html  register.html  scan.html  table.html  target.html
dev_docs/jinja/: jinja.md
dev_docs/wtforms/: csrf.md  fields.Field.md  form.Form.md  validators.md  widgets.md
diabeteswarrior/: __init__.py  app.py  auth.py  bgl.py  blog.py  calc_insulin_dose.py  config.py  db.py  dwarrior.py  forms.py  models.py  schema.sql  site.db
diabeteswarrior/HLTH/: __init__.py  tui.py
diabeteswarrior/MEAL/: __init__.py
diabeteswarrior/SCAN/: __init__.py  scan.csv  scan.csv.backup  tui.py
diabeteswarrior/errors/: handlers.py
diabeteswarrior/healths/: forms.py  health.csv  routes.py
diabeteswarrior/main/: routes.py
diabeteswarrior/posts/: routes.py
diabeteswarrior/scans/: forms.py  routes.py
diabeteswarrior/templates/: about.html  base.html  home.html  index.html  layout.html  login.html  register.html  scan.html
flaskblog/: __init__.py  forms.py  models.py  routes.py  site.db
flaskblog/posts/: routes.py
flaskr/: __init__.py  auth.py  blog.py
instance/: dwarrior.sqlite
tests/: __init__.py  conftest.py  test_auth.py  test_blog.py  test_db.py  test_diabeteswarrior.py  test_factory.py
(+44 files in other folders)
