[tool.poetry]
name = "diabeteswarrior"
version = "0.1.0"
description = "Diabetes Management Application"
authors = ["Harrison Johnson <hjohnson933@cox.net>"]
license = "OSLv3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.0.0"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
