[tool.poetry]
name = "diabeteswarrior"
version = "0.1.0"
description = "Diabetes Managment Application"
authors = ["Harrison Johnson <hjohnson933@cox.net>"]
license = "OSLv3"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
blinker = "^1.4"
certifi = "^2021.10.8"
cffi = "^1.15.0"
click = "^8.0.3"
Flask = "^2.0.3"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.0.1"
Pillow = "^9.0.1"
pycparser = "^2.21"
six = "^1.16.0"
SQLAlchemy = "^1.4.31"
Werkzeug = "^2.0.3"
WTForms = "^3.0.1"
python-dotenv = "^0.19.2"
email-validator = "^1.1.3"
arrow = "^1.2.2"
pandas = "^1.4.1"
numpy = "^1.22.2"
dash = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.0.1"
coverage = "^6.3.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
